2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Reformat with VS to have consistent tabs in here.

2009-10-07  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: When determining if a hostlane has pending work,
	don't count work that don't have its dependencies fullfilled as pending
	work.

2009-09-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Add a method to get the current status of the
	scheduler/deletion directives command.

	* WebServices.wsdl: Regenerated.

2009-09-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Add a GetFrontPageData that can handle multiple
	selected lanes.

	* WsdlGenerator.cs: Don't do anything with int arrays.

	* WebServices.wsdl: Regenerated.

2009-09-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Fix new queue management logic to detect when
	there is nothing to do for a hostlane, in which case it should try
	other hostlanes.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Add support for the new queue management option
	to only build one revisionwork at a time.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: DeleteHost: use DBHost's extension method
	to delete the host, this way we also delete records in all related
	tables.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Added FindHost.
	* WebServices.wsdl: Regenerated.

2009-09-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Add EditHostWithPassword method
	to set the password as well for the host.

	* WebServices.wsdl: Regenerated.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Be more apache friendly.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: When getting login data, check both
	cookies (set if we were redirected to from the web ui)
	and url (set if the web ui is downloading).
