@@ -1,5 +1,10 @@
 2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Authentication.cs: Don't throw exception on invalid credentials,
+	act as if no credentials was specified.
+
+2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* WebServices.asmx.cs: Reformat with VS to have consistent tabs in here.
 
 2009-10-07  Rolf Bjarne Kvinge  <RKvinge@novell.com>
